testing/tests/ui/block_in_filter_block.stderr
error: cannot have a block inside a filter block
 --> BlockInFilter.html:7:11
  |
       7 |         {% block title %}New title{% endblock %}
         |           ^ close to this token
         |
 --> tests/ui/block_in_filter_block.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^
